force-app/main/default/objects/Account/fields/FTDdemo__c.field-meta.xml
<CustomField>
    <fullName>FTDdemo__c</fullName>
    <label>FTDdemo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>