force-app/main/default/objects/Account/fields/FTDDemoField__c.field-meta.xml
<CustomField>
    <fullName>FTDDemoField__c</fullName>
    <description>Test field for demo</description>
    <label>FTD Demo Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>