force-app/main/default/objects/Account/fields/TestField__c.field-meta.xml
<CustomField>
    <fullName>TestField__c</fullName>
    <description>TestField</description>
    <label>TestField</label>
    <length>10</length>
    <type>Text</type>
</CustomField>